<resources>
    <string name="app_name">M.K.Codes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="send_message">Send Now</string>
    <string name="enter_name">Mustakim</string>
    <string name="hello_world">Hello World</string>
    <string name="txtvw_enter_name">Enter Name</string>
    <string name="click_me">Click Me</string>
    <string name="Credit">Made By M.K.</string>
</resources>